--- a/slick.grid.css
+++ b/slick.grid.css
@@ -5,6 +5,10 @@ No built-in (selected, editable, highlight, flashing, invalid, loading, :focus) 
 classes should alter those!
 */
 
+.ui-widget {
+  font-family: inherit;
+}
+
 .slick-header.ui-state-default, .slick-headerrow.ui-state-default {
   width: 100%;
   overflow: hidden;
